alignment correction

--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,13 @@ body {
     background-color: black;
     font-size: 22px;
     margin: 0 auto;
-    color: #938F8E;
+    color:white;
     font-family: escapist;
     text-align: center;
 }
 
-@keyframes socialLink 	{from {color:#938F8E;}
-                                    to {color:white;}}
+@keyframes socialLink 	{from {color:white;}
+                                    to {color:#938F8E;}}
                                     
 .container {
     display: flex;
@@ -41,7 +41,7 @@ header img {
 
 header a {
     margin-right: 0.75em;
-    color: #938F8E;
+    color: white;
     font-size: 3.0em;
 }
 
@@ -83,8 +83,8 @@ header a:hover {animation-name:socialLink;
     height:36.36em;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    justify-items: space-around;
+    
 }
 
 #pics img {
@@ -139,7 +139,7 @@ align-items: center;
 
 footer a {
     text-decoration: none;
-    color: #938F8E;
+    color: white;
 }
 
 @media only screen and (max-width: 650px) {
@@ -156,7 +156,7 @@ footer a {
 
     header a {
         margin-right: 0.75em;
-        color: #938F8E;
+        color: white;
         font-size: 2.0em;
     }
 
@@ -227,4 +227,7 @@ footer a {
     }
 }
 
+
+        
+        
 
